--- a/views/layout/nav.ejs
+++ b/views/layout/nav.ejs
@@ -12,6 +12,6 @@
       <li><a href="" class="paragraph"> Розклад</a></li>
       <li><a href="" class="paragraph"> Мапа</a></li>
     </ul>
-    <button class="donate">Підтримати</button>
+    <button class="donate paragraph">Підтримати</button>
   </nav>
 </header>
