--- a/views/participants-section/education.ejs
+++ b/views/participants-section/education.ejs
@@ -1,3 +1,3 @@
-<div class="education visible participants-list">
+<div class="education participants-list">
   <%- include("education/deresh.ejs") %><%- include("education/kozlovskyy.ejs") %>
 </div>
