--- a/views/participants-section/music/monoconda.ejs
+++ b/views/participants-section/music/monoconda.ejs
@@ -4,10 +4,10 @@
     <img src="/src/imgs/participants/monoconda-identity.jpeg" alt="monoconda identity cover" />
     <div>
       <div class="dot"></div>
-      <p>14:00</p>
+      <p class="heading-5">12:00</p>
     </div>
   </div>
-  <p class="participant__desc">
+  <p class="participant__desc paragraph-min">
     Коли життя показує тобі всі свої жахіття — ти одразу починаєш розуміти речі трохи краще.
     Починаєш усвідомлювати, що насправді важливо, а що не дуже. З часом приходить розуміння того, що
     таке твій дім, твоя мова, твоя природа, як людини та особистості. Над цим не дуже замислюєшся,
