--- a/views/participants-section/theatre/mariiamagdalena.ejs
+++ b/views/participants-section/theatre/mariiamagdalena.ejs
@@ -4,10 +4,10 @@
     <img src="/src/imgs/participants/mariiamagdalyna.png" alt="mariiamagdalyna cover" />
     <div>
       <div class="dot"></div>
-      <p>16:00</p>
+      <p class="heading-5">12:00</p>
     </div>
   </div>
-  <p class="participant__desc">
+  <p class="participant__desc paragraph-min">
     Меса «Людина?» – це дослідження хто така людина та як відчувати про війну. Спільний художній
     пошук актрис Mariia & Magdalyna разом контрабасисткою та електронною музиканткою krkrk. Mariia &
     Magdalyna – дует Марусі та Надії, які співпрацюють разом уже 9 років. За весь цей час взяли
