--- a/views/participants-section/music/gnatenko.ejs
+++ b/views/participants-section/music/gnatenko.ejs
@@ -4,10 +4,10 @@
     <img src="/src/imgs/participants/gnatenko-u.jpeg" alt="koloah serenity cover" />
     <div>
       <div class="dot"></div>
-      <p>12:00</p>
+      <p class="heading-5">12:00</p>
     </div>
   </div>
-  <p class="participant__desc">
+  <p class="participant__desc paragraph-min">
     On last year’s Millennium Sun, Dmitriy Avksentiev grappled with futurism’s pleasures and terrors
     by revisiting the past. Inspired by classic science-fiction films like Blade Runner and Akira,
     the Ukrainian electronic musician, aka Koloah and Voin Oruwu, set out to craft an album about
