--- a/views/participants-section/theatre/hooligan.ejs
+++ b/views/participants-section/theatre/hooligan.ejs
@@ -4,10 +4,10 @@
     <img src="/src/imgs/participants/hooligan.jpeg" alt="hooligan cover" />
     <div>
       <div class="dot"></div>
-      <p>16:00</p>
+      <p class="heading-5">12:00</p>
     </div>
   </div>
-  <p class="participant__desc">
+  <p class="participant__desc paragraph-min">
     In May 2022 we were due to deliver Hooligan, a participatory music theatre project funded by the
     British Council in Dnipro, Ukraine, in partnership with Dnipro Centre for Contemporary Culture
     and Hooligan Art Community, a collective of Ukrainian artists working with our long-term
