--- a/views/participants-section/theatre/stus.ejs
+++ b/views/participants-section/theatre/stus.ejs
@@ -4,10 +4,10 @@
     <img src="/src/imgs/participants/stus.jpeg" alt="stus cover" />
     <div>
       <div class="dot"></div>
-      <p>16:00</p>
+      <p class="heading-5">12:00</p>
     </div>
   </div>
-  <p class="participant__desc">
+  <p class="participant__desc paragraph-min">
     «Стус: Перехожий» – це медитативна камерна опера від Центру сучасного мистецтва "ДАХ". Спроба
     добути закладене Стусом в поезії через голос, фортепіано та контрабас. <br />
     «Стус: Перехожий» – це унікальний проєкт в контексті історії ЦСМ "ДАХ" тим, що це перший
