cinema, visuals added

--- a/views/participants-section/theatre/hooligan.ejs
+++ b/views/participants-section/theatre/hooligan.ejs
@@ -1,7 +1,7 @@
 <div class="participant">
   <h3 class="heading-3">Hooligan Art Community</h3>
   <div class="participant__pic">
-    <img src="/src/imgs/participants/hooligan.jpeg" alt="hooligan cover" />
+    <img src="/src/imgs/participants/hooligan.jpg" alt="hooligan cover" />
     <div>
       <div class="dot"></div>
       <p class="heading-5">12:00</p>
