--- a/views/participants-section/theatre/mariiamagdalena.ejs
+++ b/views/participants-section/theatre/mariiamagdalena.ejs
@@ -1,7 +1,7 @@
 <div class="participant">
   <h3 class="heading-3">mariia&magdalyna + krkrk</h3>
   <div class="participant__pic">
-    <img src="/src/imgs/participants/mariiamagdalyna.png" alt="mariiamagdalyna cover" />
+    <img src="/src/imgs/participants/mariiamagdalyna.jpeg" alt="mariiamagdalyna cover" />
     <div>
       <div class="dot"></div>
       <p class="heading-5">12:00</p>
