--- a/views/participants.ejs
+++ b/views/participants.ejs
@@ -10,6 +10,7 @@
   </ul>
   <div class="participants--wrapper">
     <%- include("participants-section/music.ejs") %><%- include("participants-section/theatre.ejs")
-    %><%- include("participants-section/education.ejs") %>
+    %><%- include("participants-section/education.ejs") %><%-
+    include("participants-section/visual.ejs") %><%- include("participants-section/cinema.ejs") %>
   </div>
 </section>
