--- a/views/participants-section/music/koloah.ejs
+++ b/views/participants-section/music/koloah.ejs
@@ -8,16 +8,17 @@
     </div>
   </div>
   <p class="participant__desc paragraph-min">
-    On last year’s Millennium Sun, Dmitriy Avksentiev grappled with futurism’s pleasures and terrors
-    by revisiting the past. Inspired by classic science-fiction films like Blade Runner and Akira,
-    the Ukrainian electronic musician, aka Koloah and Voin Oruwu, set out to craft an album about
-    our own era, “where science and technology coexist with wars and dictatorship, where world
-    hunger exists alongside space travel.” In keeping with that tangled timeline—which echoed an
-    observation often attributed to William Gibson, “The future is already here; it’s just not
-    evenly distributed yet”—the music’s high-tech overtones tangled with echoes of the past 30 years
-    of electronic music, mixing alien textures with familiar strains of jungle and techno. There was
-    a dystopian cast to some of the album’s darker moments, with pummeling breakbeats wreathed in
-    minor-key synths, and TB-303 patterns dripping like acid rain. But placid ambient tones
-    transmitted a message of cautious optimism.
+    Як в оточуючому світі зараз складно знайти спокій та гармонію, так новий ембіент-альбом
+    київського музиканта та продюсера Koloah (Дмитра Авксентьєва) наче повністю зітканий з них. Його
+    назва Serenity, тобто безтурботність, відображає медитацію на сучасні реалії українців. Якщо
+    минулий альбом Koloah Millennium Sun розповідає про космічну утопію, то 8 треків з Serenity
+    стали результатом антиутопії, що спіткала Україну. Коли 24 лютого росія розпочала війну проти
+    українського народу, Дмитро залишив Київ з котом, мінімумом одягу та лептопом, щоб лише через 70
+    годин знайти нове безпечне місце. Свою історію артист розповідає на обкладинці альбому. Koloah
+    наголошує, що війна в рідній країні наштовхнула його на пошуки в собі сил триматись далі. Їх він
+    через музику й хоче поширити з іншими українцями в умовах, коли “завтра” — це химерне явище, яке
+    може й не настати. “Я створив цей альбом, щоб відобразити те, що відбувається з нами: сльози,
+    ностальгія, мрії про майбутнє, віра в яскравий завтрашній день. Ми виживемо, повернемось до
+    наших міст і відбудуємо країну, коли війна скінчиться”.
   </p>
 </div>
