--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dracula">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,9 +7,6 @@
     <meta name="description" content="<%= meta ? meta : '' %>" />
     <title><%= pageTitle %></title>
     <link rel="icon" type="image/png" href="/src/favicon.ico" />
-    <link href="//vjs.zencdn.net/7.10.2/video-js.min.css" rel="stylesheet" />
-    <script src="//vjs.zencdn.net/7.10.2/video.min.js"></script>
-    <script src="https://pay.fondy.eu/static_common/v1/checkout/ipsp.js"></script>
     <link rel="stylesheet" href="/css/main.css" />
   </head>
 </html>
