--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -9,6 +9,7 @@
   @include respond(phone) {
     display: flex;
     flex-direction: column;
+    margin-top: 16rem;
   }
   &__theatre {
     grid-column: 1 / 7;
