--- a/views/participants-section/theatre.ejs
+++ b/views/participants-section/theatre.ejs
@@ -1,4 +1,4 @@
-<div class="theatre participants-list">
+<div class="theatre visible participants-list">
   <%- include("theatre/mariiamagdalena.ejs") %><%- include("theatre/hooligan.ejs") %><%-
   include("theatre/stus.ejs") %>
 </div>
