--- a/views/participants-section/visual/feldman.ejs
+++ b/views/participants-section/visual/feldman.ejs
@@ -1,5 +1,5 @@
 <div class="participant">
-  <h3 class="heading-3">Hooligan Art Community</h3>
+  <h3 class="heading-3">Sestry Feldman</h3>
   <div class="participant__pic">
     <img src="/src/imgs/participants/feldman-taro.jpeg" alt="feldman-taro cover" />
     <div>
