--- a/views/participants-section/visual/side.ejs
+++ b/views/participants-section/visual/side.ejs
@@ -1,7 +1,7 @@
 <div class="participant">
   <h3 class="heading-3">Vlad Naboka SIDE</h3>
   <div class="participant__pic">
-    <img src="/src/imgs/participants/side.jpeg" alt="side cover" />
+    <img src="/src/imgs/participants/side.png" alt="side cover" />
     <div>
       <div class="dot"></div>
       <p class="heading-5">War Side Effects by Vlad Naboka SIDE</p>
