--- a/views/participants-section/music.ejs
+++ b/views/participants-section/music.ejs
@@ -1,4 +1,4 @@
-<div class="music visible participants-list">
+<div class="music participants-list">
   <%- include("music/koloah.ejs") %> <%- include("music/monoconda.ejs") %><%-
   include("music/gnatenko.ejs") %>
 </div>
