monoconda text edit

--- a/views/participants-section/music/monoconda.ejs
+++ b/views/participants-section/music/monoconda.ejs
@@ -8,14 +8,14 @@
     </div>
   </div>
   <p class="participant__desc paragraph-min">
-    Коли життя показує тобі всі свої жахіття — ти одразу починаєш розуміти речі трохи краще.
-    Починаєш усвідомлювати, що насправді важливо, а що не дуже. З часом приходить розуміння того, що
-    таке твій дім, твоя мова, твоя природа, як людини та особистості. Над цим не дуже замислюєшся,
-    коли живеш у комфорті, рефлексуючи з того чи іншого приводу. Коли в Україні почалася війна — все
-    одразу стало чорно-білим, простим та зрозумілим. А трохи згодом прийшло розуміня того, хто є ти.
-    Через кризу особистості проявляється твоя ідентичність та відбуваються тектонічні рухи у
-    свідомості. Війна, попри всі її жахіття, смерть та руйнацію несе в собі функцію прискорення
-    багатьох процесів. Як економічно-політичних, так і соціально - психологічних. Коли розумієш, що
-    завтра може не настати — трохи швидше рухаєшся вперед.
+    З початком війни питання ідентичності в українців набуло іншого, прозорого значення. Коли
+    навколо руйнується весь звичний світ, життя стає простішим та складається лише з найважливіших
+    речей. Цю думку в музиці, що увійшла до альбому Identity, поширює український продюсер Monoconda
+    (Олександр Філоненко). “Війна, попри всі її жахіття, смерть та руйнацію несе в собі функцію
+    прискорення багатьох процесів” — стверджує музикант. — “Як економічно-політичних, так і
+    соціально - психологічних”. Хоча Identity був створений за місяць до початку війни, альбом
+    відобразив відчуття неминучості, що наближається. Саме це відчуття, за словами Олександра, й
+    спонукає рухатись вперед швидше, поки є шанс встигнути. Тому ембієнт-треки в альбомі дещо
+    швидкі, наполегливі та інтенсивні. Уособлюють дію тут і зараз. Адже завтра може вже не бути.
   </p>
 </div>
