theatre content update

--- a/views/participants-section/theatre/hooligan.ejs
+++ b/views/participants-section/theatre/hooligan.ejs
@@ -8,16 +8,18 @@
     </div>
   </div>
   <p class="participant__desc paragraph-min">
-    In May 2022 we were due to deliver Hooligan, a participatory music theatre project funded by the
-    British Council in Dnipro, Ukraine, in partnership with Dnipro Centre for Contemporary Culture
-    and Hooligan Art Community, a collective of Ukrainian artists working with our long-term
-    collaborator Peter Cant. The war has of course made this impossible, but the artists, now
-    displaced across Europe, have developed a plan to relocate the project to Germany with many of
-    the original Hooligan artists and Ukrainian refugee participants. We've been working with
-    Hooligan Art Community since 2019 when they were selected for our Various Stages Festival 2020.
-    They planned a three-day workshop with a young adult community chorus in London. This was cut
-    short by the first lockdown and a scramble to return the artists to Ukraine before the borders
-    closed. We could not have imagined what was to follow - an ongoing pandemic, and almost exactly
-    two years later, the violent invasion of Ukraine.
+    Hooligan Art Community - група акторів , що працюють з театром у форматі work-in-progress. З
+    2017 співпрацюють з британським режисером Пітером Кантом , спільно випустили проєкти
+    <a href="http://dakh.com.ua/post/tranzyt/" target="_blank">TranzYt</a> ,
+    <a href="https://artarsenal.in.ua/vystavky/podia/vystava-hooligan/" target="_blank">Hoolgian</a>
+    та
+    <a href="https://www.i-portunus.eu/story/hooligan-art-community/" target="_blank">Radiation</a>.
+    <br />
+    З початком травня 2022 Hooligan Art Community запустили німецько-українську театральну
+    резиденцію. Українські актори Данило Шраменко та Семен Кислий почали репетицій в Києві, водночас
+    режисер Пітер Кант та хореограф Маті почали репетиції з українцями в Берліні. 25 травня буде
+    презентація проєкту. 14 травня Данило Шраменко та Семен Кислий поділяться напрацюваннями. Театр
+    work-in-progress - це коли глядач є співучасником процесу, ділить з актором досвід вивченням,
+    дослідження.
   </p>
 </div>
