--- a/views/participants-section/theatre/mariiamagdalena.ejs
+++ b/views/participants-section/theatre/mariiamagdalena.ejs
@@ -8,13 +8,12 @@
     </div>
   </div>
   <p class="participant__desc paragraph-min">
-    Меса «Людина?» – це дослідження хто така людина та як відчувати про війну. Спільний художній
-    пошук актрис Mariia & Magdalyna разом контрабасисткою та електронною музиканткою krkrk. Mariia &
-    Magdalyna – дует Марусі та Надії, які співпрацюють разом уже 9 років. За весь цей час взяли
-    участь у понад 10 проєктах, були учасницями соціального кабере «ЦеШо», актрисами театру «Дах», а
-    у 2020 запустили спільний проєкт театральних мес. До роботи над месою «Людина?» приєдналася
-    контрабасистка та електронна музикантка Христина, яка транслювала свої відчуття у звук.
-    Хаотичні, аритмічні мелодії, що увібрали біль та пошук. Вінниця – третє місто після Львова та
-    Києва, де буде вистава. Далі покази проєкту у Ганновері, Будапешті, Вісбадені та Бремені.
+    “людина?...” – театрально-музична меса. Дослідження хто така людина та як відчувати про війну.
+    Спільний художній пошук актрис Mariia & Magdalyna разом контрабасисткою та електронною
+    музиканткою krkrk. Хаотичні, аритмічні мелодії, що увібрали біль та пошук. «Людина?» – це
+    музична подорож: поєднання щоденників, які писали щодня під час війни, і текстів з Біблії. За
+    допомогою цих текстів мисткині протягом 2 тижнів досліджували питання любові, прийняття,
+    прощення, гніву, гріха та ненависті. які це слова в сучасному світі? це актуально? чи можу я
+    вірити в щось під час руйнування світу?
   </p>
 </div>
