--- a/views/hero.ejs
+++ b/views/hero.ejs
@@ -1,7 +1,7 @@
 <section class="hero wrapper-main">
   <div class="hero__theatre">
     <h1 class="hero-font">мисте</h1>
-    <h1 class="hero-font">цтво</h1>
+    <h1 class="hero-font">цтво -</h1>
     <h1 class="hero-font">зброя</h1>
   </div>
   <div class="hero__desc">
