--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -13,7 +13,7 @@ html {
 
 body {
   color: var(--color-white);
-  background-color: var(--background-color-grey);
+  background-color: $color-main-y;
   box-sizing: border-box;
 }
 
