--- a/views/support.ejs
+++ b/views/support.ejs
@@ -1,7 +1,7 @@
 <section class="support wrapper-main">
   <div class="support__title">
     <h1 class="heading-1">Підтримка</h1>
-    <img src="/src/imgs/logo-yellow.png" alt="artweapon logo" />
+    <img src="/src/imgs/logo-blue.svg" alt="artweapon logo" />
   </div>
   <div class="support__text">
     <p class="paragraph-bold">Як можна нас підтримати</p>
