--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,7 +50,7 @@ html {
 
 body {
   color: var(--color-white);
-  background-color: var(--background-color-grey);
+  background-color: #ffc535;
   box-sizing: border-box; }
 
 main {
@@ -225,7 +225,7 @@ button {
       margin-top: 1rem; }
       .hero__desc__meta__loc div {
         margin-right: 1rem;
-        background-color: #ffc535; }
+        background-color: #2d82df; }
     .hero__desc__about {
       margin-top: 3.2rem; }
       .hero__desc__about > p {
@@ -246,7 +246,7 @@ button {
         padding: 0 0 0 12vw !important;
         margin-top: 2rem; } }
     .participants ul li {
-      background-color: #d4d4d4;
+      background-color: white;
       padding: 2rem 4rem;
       border-radius: 50px;
       display: flex;
@@ -324,7 +324,7 @@ button {
   .support__title {
     grid-column: 1 / 7; }
     .support__title img {
-      width: 100%;
+      width: 60%;
       height: auto; }
       @media (max-width: 56.25em) {
         .support__title img {
