--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -35,7 +35,7 @@
         margin-top: 1rem;
         div {
           margin-right: 1rem;
-          background-color: $color-main-y;
+          background-color: $color-main-b;
         }
       }
     }
@@ -65,7 +65,7 @@
       margin-top: 2rem;
     }
     li {
-      background-color: #d4d4d4;
+      background-color: white;
       padding: 2rem 4rem;
       border-radius: 50px;
       display: flex;
@@ -163,13 +163,15 @@
   &__title {
     grid-column: 1 / 7;
     img {
-      width: 100%;
+      width: 60%;
       height: auto;
+      // margin-top: -rem;
       @include respond(phone) {
         position: absolute;
         bottom: 0;
         left: 0;
         z-index: -1;
+        // margin-top: 0;
       }
     }
   }
