nav color update

--- a/sass/layout/navigation.scss
+++ b/sass/layout/navigation.scss
@@ -1,15 +1,15 @@
-@import "../abstracts/mixins.scss";
+@import "../abstracts/mixins.scss", "../abstracts/colors.scss";
 
 header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 2rem 12vw;
+  background-color: $color-main-y;
   @include respond(phone) {
     position: fixed;
     z-index: 10;
     top: 0;
-    background-color: white;
     // padding: 0;
     width: 100%;
   }
