nav color update

--- a/views/hero.ejs
+++ b/views/hero.ejs
@@ -8,7 +8,7 @@
     <div class="hero__desc__meta">
       <div class="hero__desc__meta__date">
         <div class="dot"></div>
-        <p class="paragraph">14.05.2022 12:00 - 20:00</p>
+        <p class="paragraph">14.05.2022 / 12:00 - 20:00</p>
       </div>
       <div class="hero__desc__meta__loc">
         <div class="dot"></div>
