--- a/sass/layout/navigation.scss
+++ b/sass/layout/navigation.scss
@@ -1,4 +1,4 @@
-@import "../abstracts/mixins.scss", "../abstracts/colors.scss";
+@import "../abstracts/mixins.scss", "../base/colors.scss";
 
 header {
   display: flex;
