--- a/views/hero.ejs
+++ b/views/hero.ejs
@@ -24,6 +24,10 @@
         «Мистецтво–Зброя!» — це культурний діалог митців та мисткинь під час війни. Можливість,
         крізь оптику іншого, відчути інакший досвід проживання теперішнього. Мистецтво, що актуальне
         на часі війни, чи створене у війні. Спроба осягнути хто ми, в який час живемо та куди йдемо.
+        <br />
+        <br />
+        Вхід — на місці донейт 200 uah або більше. <br />
+        Весь профіт відправляємо ЗСУ та артистам.
       </p>
     </div>
     <ul class="hero__desc__bages">
