--- a/views/participants.ejs
+++ b/views/participants.ejs
@@ -5,7 +5,7 @@
     <li class="paragraph" id="music">Аудіо Перформанс</li>
     <li class="paragraph" id="visual">Візуальне мистецтво</li>
     <li class="paragraph" id="cinema">Кіно</li>
-    <li class="paragraph" id="education">освітня програма</li>
+    <li class="paragraph" id="education">Освіта</li>
     <li class="paragraph" id="tatoo">Тату майстри</li>
   </ul>
   <div class="participants--wrapper">
