--- a/views/hero.ejs
+++ b/views/hero.ejs
@@ -16,11 +16,14 @@
       </div>
     </div>
     <div class="hero__desc__about">
-      <p class="paragraph-bold">Про подію</p>
+      <!-- <p class="paragraph-bold">Про подію</p> -->
       <p class="paragraph">
         «Мистецтво–Зброя!» — це день сучасної української культури в стінах НЮ31. <br />
         Ми зібрали разом близьких митців та мисткинь , артистів, музикантів, аби вони поділились
         своїми відчуттями війни. <br />
+        Ми зібрали разом близьких митців та мисткинь , артистів, музикантів, аби вони поділились
+        своїми відчуттями війни.
+        <br />
         «Мистецтво–Зброя!» — це культурний діалог митців та мисткинь під час війни. Можливість,
         крізь оптику іншого, відчути інакший досвід проживання теперішнього. Мистецтво, що актуальне
         на часі війни, чи створене у війні. Спроба осягнути хто ми, в який час живемо та куди йдемо.
