--- a/views/participants-section/education/kozlovskyy.ejs
+++ b/views/participants-section/education/kozlovskyy.ejs
@@ -4,20 +4,14 @@
     <img src="/src/imgs/participants/kozlovskyy.jpeg" alt="kozlovskyy cover" />
     <div>
       <div class="dot"></div>
-      <p class="heading-5">12:00</p>
+      <p class="heading-5">14:00</p>
     </div>
   </div>
   <p class="participant__desc paragraph-min">
-    On last year’s Millennium Sun, Dmitriy Avksentiev grappled with futurism’s pleasures and terrors
-    by revisiting the past. Inspired by classic science-fiction films like Blade Runner and Akira,
-    the Ukrainian electronic musician, aka Koloah and Voin Oruwu, set out to craft an album about
-    our own era, “where science and technology coexist with wars and dictatorship, where world
-    hunger exists alongside space travel.” In keeping with that tangled timeline—which echoed an
-    observation often attributed to William Gibson, “The future is already here; it’s just not
-    evenly distributed yet”—the music’s high-tech overtones tangled with echoes of the past 30 years
-    of electronic music, mixing alien textures with familiar strains of jungle and techno. There was
-    a dystopian cast to some of the album’s darker moments, with pummeling breakbeats wreathed in
-    minor-key synths, and TB-303 patterns dripping like acid rain. But placid ambient tones
-    transmitted a message of cautious optimism.
+    Ігор Козловський про відповідальність митця Дискусійна зустріч з Ігорем Козловським –
+    релігієзнавцем і громадським діячем, людиною з потужною глибиною розуму, духовного досвіду та
+    чуттєвості. Торкнемося тем відповідальності особистості, а конкрето митця, на власному фронтирі
+    – гнучкістю мистецтва та емпатичністю людяності. Співзвучно думатимемо про актуальність
+    сучаснооновлення культурного дискурсу та внутрішні запити на переосмислення досвіду.
   </p>
 </div>
