--- a/views/participants-section/theatre/hooligan.ejs
+++ b/views/participants-section/theatre/hooligan.ejs
@@ -4,22 +4,19 @@
     <img src="/src/imgs/participants/hooligan.jpg" alt="hooligan cover" />
     <div>
       <div class="dot"></div>
-      <p class="heading-5">12:00</p>
+      <p class="heading-5">4:00-15:00, Closer</p>
     </div>
   </div>
   <p class="participant__desc paragraph-min">
-    Hooligan Art Community - група акторів , що працюють з театром у форматі work-in-progress. З
-    2017 співпрацюють з британським режисером Пітером Кантом , спільно випустили проєкти
-    <a href="http://dakh.com.ua/post/tranzyt/" target="_blank">TranzYt</a> ,
-    <a href="https://artarsenal.in.ua/vystavky/podia/vystava-hooligan/" target="_blank">Hoolgian</a>
-    та
-    <a href="https://www.i-portunus.eu/story/hooligan-art-community/" target="_blank">Radiation</a>.
-    <br />
-    З початком травня 2022 Hooligan Art Community запустили німецько-українську театральну
-    резиденцію. Українські актори Данило Шраменко та Семен Кислий почали репетицій в Києві, водночас
-    режисер Пітер Кант та хореограф Маті почали репетиції з українцями в Берліні. 25 травня буде
-    презентація проєкту. 14 травня Данило Шраменко та Семен Кислий поділяться напрацюваннями. Театр
-    work-in-progress - це коли глядач є співучасником процесу, ділить з актором досвід вивченням,
-    дослідження.
+    Hooligan Art Community – група театралів, що працюють у форматі work-in-progress. Цей формат не
+    має кінцевої форми, допрацьовується та змінюється протягом існування, а глядач є співучасником
+    цього процесу. 14 травня Hooligan Art Community представить "Ритми війни" – пластичний
+    перформанс, створений спільно з Космос Табором. Перформер – Данило Шраменко, актор, музикант,
+    танцівник, поет. Акцентує увагу на роботі з тілом, дослідженні його можливостей, пластиці. Серед
+    його проєктів – серія україно-німецьких резиденцій TranzYt, Hoolgian та Radiation спільно з
+    режисером Пітером Кантом, а також музичний бенд "Ціаністий Кафєль" Барабани – Олександр Явдик,
+    перкусіоніст, космодесантник. Співпрацює з музичними проєктами "Женя і Катя", Стас Корольов та
+    Асафатов Сергій. Співавтор та виконавець документального перформансу "Народження Їжака",
+    випущенного у Києві на 17 день війни.
   </p>
 </div>
