--- a/views/participants-section/theatre/mariiamagdalena.ejs
+++ b/views/participants-section/theatre/mariiamagdalena.ejs
@@ -4,7 +4,7 @@
     <img src="/src/imgs/participants/mariiamagdalyna.jpeg" alt="mariiamagdalyna cover" />
     <div>
       <div class="dot"></div>
-      <p class="heading-5">12:00</p>
+      <p class="heading-5">18:00-19:00, Closer</p>
     </div>
   </div>
   <p class="participant__desc paragraph-min">
