--- a/views/participants-section/theatre/stus.ejs
+++ b/views/participants-section/theatre/stus.ejs
@@ -4,7 +4,7 @@
     <img src="/src/imgs/participants/stus.jpeg" alt="stus cover" />
     <div>
       <div class="dot"></div>
-      <p class="heading-5">12:00</p>
+      <p class="heading-5">3:00-14:30, Greys Cat Studio</p>
     </div>
   </div>
   <p class="participant__desc paragraph-min">
