--- a/views/participants-section/music/gnatenko.ejs
+++ b/views/participants-section/music/gnatenko.ejs
@@ -4,20 +4,8 @@
     <img src="/src/imgs/participants/gnatenko-u.jpeg" alt="koloah serenity cover" />
     <div>
       <div class="dot"></div>
-      <p class="heading-5">12:00</p>
+      <p class="heading-5">Аудіо Перформанс (Otel')</p>
     </div>
   </div>
-  <p class="participant__desc paragraph-min">
-    On last year’s Millennium Sun, Dmitriy Avksentiev grappled with futurism’s pleasures and terrors
-    by revisiting the past. Inspired by classic science-fiction films like Blade Runner and Akira,
-    the Ukrainian electronic musician, aka Koloah and Voin Oruwu, set out to craft an album about
-    our own era, “where science and technology coexist with wars and dictatorship, where world
-    hunger exists alongside space travel.” In keeping with that tangled timeline—which echoed an
-    observation often attributed to William Gibson, “The future is already here; it’s just not
-    evenly distributed yet”—the music’s high-tech overtones tangled with echoes of the past 30 years
-    of electronic music, mixing alien textures with familiar strains of jungle and techno. There was
-    a dystopian cast to some of the album’s darker moments, with pummeling breakbeats wreathed in
-    minor-key synths, and TB-303 patterns dripping like acid rain. But placid ambient tones
-    transmitted a message of cautious optimism.
-  </p>
+  <p class="participant__desc paragraph-min"></p>
 </div>
