--- a/views/participants-section/education/deresh.ejs
+++ b/views/participants-section/education/deresh.ejs
@@ -4,7 +4,7 @@
     <img src="/src/imgs/participants/deresh.jpeg" alt="deresh cover" />
     <div>
       <div class="dot"></div>
-      <p class="heading-5">16:30</p>
+      <p class="heading-5">16:30, Лекторій (24:00)</p>
     </div>
   </div>
   <p class="participant__desc paragraph-min">
