--- a/views/participants-section/education/kozlovskyy.ejs
+++ b/views/participants-section/education/kozlovskyy.ejs
@@ -4,7 +4,7 @@
     <img src="/src/imgs/participants/kozlovskyy.jpeg" alt="kozlovskyy cover" />
     <div>
       <div class="dot"></div>
-      <p class="heading-5">14:00</p>
+      <p class="heading-5">14:00, Лекторій (24:00)</p>
     </div>
   </div>
   <p class="participant__desc paragraph-min">
