--- a/views/participants-section/music/koloah.ejs
+++ b/views/participants-section/music/koloah.ejs
@@ -4,7 +4,7 @@
     <img src="/src/imgs/participants/koloah-serenity.webp" alt="koloah serenity cover" />
     <div>
       <div class="dot"></div>
-      <p class="heading-5">12:00</p>
+      <p class="heading-5">Аудіо Перформанс (Otel')</p>
     </div>
   </div>
   <p class="participant__desc paragraph-min">
