--- a/views/support.ejs
+++ b/views/support.ejs
@@ -5,23 +5,16 @@
   </div>
   <div class="support__text">
     <p class="paragraph-bold">Як можна нас підтримати</p>
-    <p class="paragraph-min">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-      been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-      galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text
-      of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
-      text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book.
-    </p>
+    <p class="paragraph-min"></p>
   </div>
   <div class="support__details">
     <div>
       <p class="heading-2 uppercase">МОНОБАНК</p>
-      <p class="heading-2 uppercase data">4441 1144 5738 7247</p>
+      <p class="heading-2 uppercase data">4441 1144 5062 8944</p>
     </div>
     <div>
       <p class="heading-2 uppercase">ПРИВАТБАНК</p>
-      <p class="heading-2 uppercase data">4441 1144 5738 7247</p>
+      <p class="heading-2 uppercase data">5457 0822 7268 0245</p>
     </div>
     <div>
       <p class="heading-2 uppercase">МІЖНАРОДНІ ПЕРЕКАЗИ</p>
@@ -29,6 +22,7 @@
     </div>
     <div>
       <p class="heading-2 uppercase">PAYPAL</p>
+      <p class="heading-2 uppercase data">pledcasting@gmail.com</p>
     </div>
   </div>
 </section>
