--- a/views/participants-section/visual.ejs
+++ b/views/participants-section/visual.ejs
@@ -1,3 +1,6 @@
 <div class="visual participants-list">
-  <%- include("visual/feldman.ejs") %><%- include("visual/side.ejs") %>
+  <%- include("visual/feldman.ejs") %><%- include("visual/george-ivanchenko.ejs") %><%-
+  include("visual/segal.ejs") %><%- include("visual/ivancyk.ejs") %><%-
+  include("visual/kalynchuk.ejs") %><%- include("visual/commercialpublicart.ejs") %><%-
+  include("visual/side.ejs") %><%- include("visual/kosovych.ejs") %>
 </div>
