--- a/views/participants-section/visual/feldman.ejs
+++ b/views/participants-section/visual/feldman.ejs
@@ -1,13 +1,16 @@
 <div class="participant">
-  <h3 class="heading-3">Sestry Feldman</h3>
+  <h3 class="heading-3">Сестри Фельдман</h3>
   <div class="participant__pic">
-    <img src="/src/imgs/participants/feldman-taro.jpeg" alt="feldman-taro cover" />
+    <img src="/src/imgs/participants/feldman-taro.png" alt="feldman-taro cover" />
     <div>
       <div class="dot"></div>
-      <p class="heading-5">Серія карт Таро, присвячених Україні</p>
+      <p class="heading-5">"Freedom of Ukraine", 2022</p>
     </div>
   </div>
   <p class="participant__desc paragraph-min">
-    Серія, що складається з 78 карт Таро присвячених Україні.
+    Ка́рти та́ро́ — колода карт, яку використовують з середини XV сторіччя в різноманітних частинах
+    Європи для карткових ігор, в безліч з яких грають і сьогодні. З кінця XVIII сторіччя карти таро
+    почали використовувати для ворожіння. Ця колода була створна у Києві в проміжку між 24 лютого та
+    26 квітня. В її основі лежать візуальні символи країни, в якій вона створювалася.
   </p>
 </div>
