--- a/views/participants-section/visual/side.ejs
+++ b/views/participants-section/visual/side.ejs
@@ -4,11 +4,11 @@
     <img src="/src/imgs/participants/side.png" alt="side cover" />
     <div>
       <div class="dot"></div>
-      <p class="heading-5">War Side Effects by Vlad Naboka SIDE</p>
+      <p class="heading-5">"War Side Effects", 2022</p>
     </div>
   </div>
   <p class="participant__desc paragraph-min">
     War Side Effects by Vlad Naboka SIDE – це колекція картин про життя під час війни. Художник
-    малює із території України. Спроба передати емоції та переживання людей, які там перебувають.
+    малює іх з території України. Спроба передати емоції та переживання людей, які там перебувають.
   </p>
 </div>
