--- a/public/css/main.css
+++ b/public/css/main.css
@@ -295,6 +295,7 @@ button {
         margin-top: 2rem; }
         .participants--wrapper .participant__pic img {
           width: 100%;
+          max-height: 80vh;
           object-fit: contain; }
         .participants--wrapper .participant__pic > div {
           position: absolute;
