--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -124,6 +124,7 @@
         margin-top: 2rem;
         img {
           width: 100%;
+          max-height: 80vh;
           object-fit: contain;
         }
         > div {
