--- a/views/support.ejs
+++ b/views/support.ejs
@@ -5,7 +5,16 @@
   </div>
   <div class="support__text">
     <p class="paragraph-bold">Як можна нас підтримати</p>
-    <p class="paragraph-min"></p>
+    <p class="paragraph-min">
+      У цей особливо непростий період українським митцям важливо творити далі, щоб ділитися з людьми
+      своїми почуттями та емоціями. У сучасному мистецтві України зараз документується наша новітня
+      історія, яку мають побачити й почути в усьому світі. Ми ставимо за мету поширити та
+      популяризувати сучасну українську культуру, та наша ініціатива на даний момент повністю
+      волонтерська. Якщо вам відкликаються наші цілі та ідеї, ви можете підтримати нас фінансово
+      будь-яким зручним для вас способом за посиланнями нижче. Частину зібраних коштів ми
+      використаємо для перекриття наших витрат на організацію івенту, а іншу частину відправимо на
+      потреби захисників у лавах ЗСУ.
+    </p>
   </div>
   <div class="support__details">
     <div>
